# ChangeLog for media-sound/laditools
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Dec 2008; Marc-Olivier Barre <marco@marcochapeau.org>
  laditols-9999.ebuild now uses the git repository

  15 Dec 2008; Thomas Kuther <gimpel@sonnenkinder.org>
  +laditools-1.0_rc1.ebuild:
  initial ebuild
